[gd_scene load_steps=2 format=3 uid="uid://bjexkidu8kax5"]

[ext_resource type="Script" path="res://Scripts/MainMenu Scripts/MainMenu.gd" id="1_ogwjs"]

[node name="MainMenu" type="Control"]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ogwjs")

[node name="LevelsMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -50.5
offset_right = 31.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="LevelsVBox" type="VBoxContainer" parent="LevelsMargin"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Level 1" type="Button" parent="LevelsMargin/LevelsVBox"]
layout_mode = 2
text = "Level 1"
alignment = 0
icon_alignment = 1

[node name="Level 2" type="Button" parent="LevelsMargin/LevelsVBox"]
layout_mode = 2
text = "Level 2"

[node name="Level 3" type="Button" parent="LevelsMargin/LevelsVBox"]
layout_mode = 2
text = "Level 3"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="Quit Game" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="button_up" from="LevelsMargin/LevelsVBox/Level 1" to="." method="_on_level_1_button_up"]
[connection signal="pressed" from="LevelsMargin/LevelsVBox/Level 1" to="." method="_on_level_1_pressed"]
[connection signal="button_up" from="LevelsMargin/LevelsVBox/Level 2" to="." method="_on_level_2_button_up"]
[connection signal="pressed" from="LevelsMargin/LevelsVBox/Level 2" to="." method="_on_level_2_pressed"]
[connection signal="button_up" from="LevelsMargin/LevelsVBox/Level 3" to="." method="_on_level_3_button_up"]
[connection signal="pressed" from="LevelsMargin/LevelsVBox/Level 3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/Quit Game" to="." method="_on_quit_game_pressed"]
